# memgrap

./: .env.example  .mcp.json  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  setup.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
dashboard/: .dockerignore  Dockerfile  jest.config.ts  next.config.ts  package-lock.json  package.json
dashboard/__tests__/: api-code.test.ts  api-graph.test.ts  api-sessions.test.ts  api-stats.test.ts  code-tree.test.tsx  neo4j.test.ts  node-detail.test.tsx  session-list.test.tsx  sidebar.test.tsx  stat-cards.test.tsx
dashboard/app/: layout.tsx
dashboard/app/code/: page.tsx
dashboard/app/code-graph/: page.tsx
dashboard/app/export/: page.tsx
dashboard/app/graph/: page.tsx
dashboard/components/: code-graph-viewer.tsx  code-tree.tsx  connection-status.tsx  date-range-picker.tsx  error-banner.tsx  error-boundary.tsx  graph-viewer.tsx  node-detail.tsx  project-selector.tsx  search-bar.tsx  session-list.tsx  sidebar.tsx  stat-cards.tsx
dashboard/contexts/: project-context.tsx
dashboard/hooks/: use-event-source.ts
dashboard/lib/: event-bus.ts  neo4j.ts
docs/: development-roadmap.md  project-changelog.md  project-overview-pdr.md  system-architecture.md  user-guide.md
plans/260326-0303-phase2-code-indexer/: phase-01-ast-parser.md  phase-02-graph-ingestion.md  phase-02-neo4j-ingestion.md  phase-03-mcp-tool.md  plan.md
plans/260326-0721-session-hooks/: plan.md
plans/260326-0932-phase4-dashboard-ui/: errata.md  phase-01-scaffold.md  phase-02-neo4j-client.md  phase-03-stats-page.md  phase-04-sessions-page.md  phase-05-code-page.md  phase-06-graph-explorer.md  phase-07-docker.md  plan.md
plans/260326-2201-phase5-testing-ci-cd/: phase-01-test-infrastructure.md  phase-02-unit-tests-pure-modules.md  phase-03-unit-tests-service-mcp.md  phase-04-unit-tests-indexer.md  phase-05-reorganize-integration-tests.md  phase-06-github-actions-ci.md  phase-07-verify-and-docs.md  plan.md
plans/reports/: general-purpose-260326-0147-graphiti-research.md  general-purpose-260326-0304-tree-sitter-python-research.md  plan-review-260326-0932-dashboard-ui.md  review-260326-1737-full-codebase-stability-autoconnect.md
scripts/: backup.bat  backup.sh  restore.bat  restore.sh
src/: __init__.py  code_graph_service.py  config.py  entity_types.py  graph_service.py  graphiti_factory.py  mcp_server.py  result_formatters.py
src/indexer/: __init__.py  ast_parser.py  import_resolver.py  incremental_indexer.py  language_configs.py  neo4j_ingestor.py  relation_extractor.py
src/session/: neo4j_connect.py  session_recall.py  session_save.py
tests/: conftest.py  test_neo4j_connect.py  test_session_recall.py  test_session_save.py
tests/fixtures/: relations_sample.py  sample.js  sample.py  sample.ts
tests/integration/: test_neo4j_connect.py  test_session_recall.py  test_session_save.py
tests/unit/: test_ast_parser.py  test_ast_parser_extended.py  test_code_graph_service.py  test_config.py  test_graph_service.py  test_graph_service_extended.py  test_import_resolver.py  test_incremental_indexer.py  test_mcp_tools.py  test_mcp_tools_extended.py  test_neo4j_ingestor.py  test_neo4j_ingestor_extended.py  test_relation_extractor.py  test_result_formatters.py
(+27 files in other folders)
