[project]
name = "memgrap"
version = "0.1.0"
description = "Graphiti-powered temporal knowledge graph memory for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "graphiti-core>=0.28.2",
    "mcp>=1.9.4",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.0.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
